--- a/Be Green/site/css/style.css
+++ b/Be Green/site/css/style.css
@@ -4455,7 +4455,7 @@ html [class*='section-'].section-bottom-0 {
 	right: 0;
 	bottom: -2px;
 	height: 66px;
-	
+	background-image: url("../images/decor-wave-bottom.png");
 }
 
 .section-main-bunner .main-bunner-title {
@@ -4962,9 +4962,7 @@ html [class*='section-'].section-bottom-0 {
 	padding-top: 0;
 }
 
-.bg-gray-1-decor {
-	position: relative;
-}
+
 
 .bg-gray-1-decor:before {
 	content: '';
